# ShfdisMini

./: .dockerignore  .gitignore  README.md  compose.yaml  compose.yml
.github/workflows/: deploy.yml
LoginManager/: LoginManager.sln  README.md  loginManager.db  loginManager.sqbpro
LoginManager/DbSessionCreator/: DbSession.cs  DbSessionCreator.csproj
LoginManager/LoginHandler/: ILoginManager.cs  IPasswordHashing.cs  LoginHandler.cs  LoginHandler.csproj  LoginManager.cs  LoginManagerFactory.cs  PasswordHashing.cs  Session.cs  SessionContext.cs
LoginManager/LoginManager/: Program.cs
LoginManager/LoginManagerAPI/: Dockerfile  LoginManagerAPI.csproj  Program.cs  User.cs
LoginManager/MailConfirmation/: IMailManager.cs  MailConfirmation.cs  MailConfirmation.csproj  MailManager.cs  MailManagerFactory.cs
LoginManager/SessionHandler/: ISession.cs  ISessionManager.cs  Session.cs  SessionContext.cs  SessionHandler.csproj  SessionManager.cs  SessionManagerFactory.cs
MailConfirmation/: README.md  dockerfile  requirements.txt
MailConfirmation/app/: main.py
WebAPIGateway/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WebAPIGateway  cmake_install.cmake  dockerfile  go.mod  main.cpp  main.go
WebAPIGateway/.cache/clangd/index/: ApiGatewayController.cpp.C63CF4A2BF9C39C2.idx  ApiGatewayController.h.33751F58252025E8.idx  main.cpp.CDBE2112D73EF4E5.idx
WebAPIGateway/APIGateway/: ApiGatewayController.cpp  ApiGatewayController.h
api-gateway-login/: Dockerfile  main.py  requirements.txt
frontend/: dockerfile  eslint.config.js  package-lock.json  package.json
(+16 files in other folders)
